add try-catch block to ReflectionExample